# clientQQ

./: .gitignore  CMakeLists.txt  README.md
3rdLib/demo/: a.out  out.json
include/: k_clip.h  k_socket_include.h  k_total_head.h  other_funcation.h  qt_clip.h
include/srcInclude/: k_clip.cpp  other_funcation.cpp  qt_clip.cpp
src/: CMakeLists.txt  main.cpp  myClient.cmake
src/commandObj/: dataMsgCmd.cpp  friendshipChangeCmd.cpp  heartRequestCmd.cpp  loginCmd.cpp  userChangeCmd.cpp
src/commandObj/include/: cmdBase.h  dataMsgCmd.h  friendshipChangeCmd.h  loginCmd.h  userChangeCmd.h
src/dataObj/: msg.cpp  user.cpp
src/dataObj/include/: msg.h  user.h
src/myClient/: clientQQ.cpp
src/myClient/include/: clientQQ.h
